feat(api): refactor and improve cache handling