@@ -61,22 +61,29 @@ public class ServiceHelper {
         return entityModels;
     }
 
-
     public BaseResponse makeBaseResponse(long id, String message) {
         return new BaseResponse(id, message);
     }
 
-    public <T extends BaseResponse> CollectionModel<EntityModel<T>> makeGameResponse_CollectionModel(Class<T> responseType, List<Game> games, Authentication authentication) {
-        return games.stream().map(game -> makeGameResponse(responseType, game, authentication)).collect(Collectors.collectingAndThen(Collectors.toList(), CollectionModel::of));
+    public <T extends BaseResponse> CollectionModel<EntityModel<T>> makeGameResponse_CollectionModel(List<T> gameResponse, Authentication authentication) {
+        return gameAssembler.toCollectionModel(gameResponse, authentication);
+    }
+    
+    public <T extends BaseResponse> List<T> makeGameResponses(Class<T> responseType, List<Game> games, Authentication authentication) {
+        return games.stream().map(game -> makeGameResponse(responseType, game, authentication)).toList();
     }
 
-    public <T extends BaseResponse> EntityModel<T> makeGameResponse(Class<T> responseType, Game game, Authentication authentication) {
+    public <T extends BaseResponse> EntityModel<T> makeGameResponse_EntityModel(T game, Authentication authentication) {
+        return gameAssembler.toModel(game, authentication);
+    }
+
+    public <T extends BaseResponse> T makeGameResponse(Class<T> responseType, Game game, Authentication authentication) {
         try {
             T response;
 
             List<DiscountResponse_Minimal> discountResponsesMinimal = game.getDiscounts().stream().map(DiscountResponse_Minimal::new).toList();
 
-            List<EntityModel<CategoryResponse_Minimal>> categoryEntityModelList = game.getCategories().stream().map(category -> makeCategoryResponse(CategoryResponse_Minimal.class, category, authentication)).toList();
+            List<EntityModel<CategoryResponse_Minimal>> categoryEntityModelList = game.getCategories().stream().map(category -> makeCategoryResponse_EntityModel(makeCategoryResponse(CategoryResponse_Minimal.class, category), authentication)).toList();
             if (GameResponse_Full.class.equals(responseType)) {
                 List<EntityModel<UserResponse_Minimal>> usersAsPublisherResponses = game.getPublisherOwners().stream().map(library -> makeUserResponse(UserResponse_Minimal.class, library.getUser(), authentication, "")).toList();
                 List<EntityModel<UserResponse_Minimal>> usersAsDevResponses = game.getDevOwners().stream().map(library -> makeUserResponse(UserResponse_Minimal.class, library.getUser(), authentication, "")).toList();
@@ -89,7 +96,7 @@ public class ServiceHelper {
                 response = responseType.getDeclaredConstructor(Long.class).newInstance(game.getId());
             }
 
-            return gameAssembler.toModel(response, authentication);
+            return response;
         } catch (Exception e) {
             throw new RuntimeException("Error while creating response: ", e);
         }
@@ -99,10 +106,10 @@ public class ServiceHelper {
         try {
             T response;
             if (GameImageResponse.class.equals(responseType)) {
-                response = (T) new GameImageResponse(gameImage, makeGameResponse(GameResponse_Minimal.class, gameImage.getGame(), authentication));
-            } else {
-                response = responseType.getDeclaredConstructor(Long.class, String.class, Blob.class).newInstance(gameImage.getId(), gameImage.getImageName(), gameImage.getImage());
-            }
+                response = (T) new GameImageResponse(gameImage, makeGameResponse_EntityModel(makeGameResponse(GameResponse_Minimal.class, gameImage.getGame(), authentication), authentication));
+            } else if (ImageResponse.class.equals(responseType)) {
+                response = (T) new ImageResponse(gameImage.getId(), gameImage.getImageName(), gameImage.getImage());
+            } else response = (T) new BaseResponse(gameImage.getId());
 
             return gameImageAssembler.toModel(response, authentication);
         } catch (Exception e) {
@@ -114,7 +121,7 @@ public class ServiceHelper {
         try {
             T response;
             if (DlcImageResponse.class.equals(responseType)) {
-                response = (T) new DlcImageResponse(dlcImage, makeDlcResponse(DlcResponse_Basic.class, dlcImage.getDlc(), authentication));
+                response = (T) new DlcImageResponse(dlcImage, makeDlcResponse_EntityModel(makeDlcResponse(DlcResponse_Basic.class, dlcImage.getDlc(), authentication), authentication));
             } else {
                 response = responseType.getDeclaredConstructor(Long.class, String.class, Blob.class).newInstance(dlcImage.getId(), dlcImage.getImageName(), dlcImage.getImage());
             }
@@ -123,9 +130,18 @@ public class ServiceHelper {
         } catch (Exception e) {
             throw new RuntimeException("Error while creating response: ", e);
         }
-    } 
+    }
 
-    public <T extends BaseResponse> EntityModel<T> makeCategoryResponse(Class<T> responseType, Category category, Authentication authentication) {
+    public <T extends BaseResponse> EntityModel<T> makeCategoryResponse_EntityModel(T categoryResponse, Authentication authentication) {
+        return categoryAssembler.toModel(categoryResponse, authentication);
+    }
+    public <T extends BaseResponse> List<T> makeCategoryResponses(Class<T> responseType, List<Category> categories) {
+        return categories.stream().map(category -> makeCategoryResponse(responseType, category)).toList();
+    }
+    public <T extends BaseResponse> CollectionModel<EntityModel<T>> makeCategoryResponse_CollectionModel(List<T> categorieResponses, Authentication authentication) {
+        return categoryAssembler.toCollectionModel(categorieResponses, authentication);
+    }
+    public <T extends BaseResponse> T makeCategoryResponse(Class<T> responseType, Category category) {
         try {
             T response;
 
@@ -135,7 +151,7 @@ public class ServiceHelper {
                 response = responseType.getDeclaredConstructor(Category.class).newInstance(category);
             }
 
-            return categoryAssembler.toModel(response, authentication);
+            return response;
         } catch (Exception e) {
             throw new RuntimeException("Error while creating response: ", e);
         }
@@ -157,47 +173,67 @@ public class ServiceHelper {
         }
     }
 
-    public <T extends BaseResponse> CollectionModel<EntityModel<T>> makeDlcResponse_CollectionModel(Class<T> responseType, List<DLC> dlcs, Authentication authentication) {
-        return dlcs.stream().map(dlc -> makeDlcResponse(responseType, dlc, authentication)).collect(Collectors.collectingAndThen(Collectors.toList(), CollectionModel::of));
+    public <T extends BaseResponse> CollectionModel<EntityModel<T>> makeDlcResponse_CollectionModel(List<T> dlcResponses, Authentication authentication) {
+        return dlcAssembler.toCollectionModel(dlcResponses, authentication);
     } 
-    public <T extends BaseResponse> EntityModel<T> makeDlcResponse(Class<T> responseType, DLC dlc, Authentication authentication) {
+    public <T extends BaseResponse> List<T> makeDlcResponses(Class<T> responseType, List<DLC> dlcs, Authentication authentication) {
+        return dlcs.stream().map(dlc -> makeDlcResponse(responseType, dlc, authentication)).toList();
+    } 
+    public <T extends BaseResponse> T makeDlcResponse(Class<T> responseType, DLC dlc, Authentication authentication) {
         try {
             T response;
             if (DlcResponse_Full.class.equals(responseType)) {
-                List<EntityModel<DiscountResponse_Minimal>> discountResponseMinimal = dlc.getDiscounts().stream().map(discount -> makeDiscountResponse(DiscountResponse_Minimal.class, discount, authentication)).toList();
-                EntityModel<GameResponse_Minimal> gameResponse_minimal = makeGameResponse(GameResponse_Minimal.class, dlc.getGame(), authentication);
+                List<EntityModel<DiscountResponse_Minimal>> discountResponseMinimal = dlc.getDiscounts().stream().map(discount -> makeDiscountResponse_EntityModel(makeDiscountResponse(DiscountResponse_Minimal.class, discount), authentication)).toList();
+                EntityModel<GameResponse_Minimal> gameResponse_minimal = makeGameResponse_EntityModel(makeGameResponse(GameResponse_Minimal.class, dlc.getGame(), authentication), authentication);
                 List<EntityModel<ImageResponse>> gameImageResponses = dlc.getDlcImages().stream().map(dlcImage -> makeDlcImageResponse(ImageResponse.class, dlcImage, authentication)).toList();
                 
                 response = (T) new DlcResponse_Full(dlc, discountResponseMinimal, gameImageResponses, gameResponse_minimal);
             } else {
                 response = responseType.getDeclaredConstructor(DLC.class).newInstance(dlc);
             } 
-            return dlcAssembler.toModel(response, authentication);
+            return response;
         } catch (Exception e) {
             throw new RuntimeException("Error while creating response: ", e);
         }
     }
-
-    public <T extends BaseResponse> EntityModel<T> makeDiscountResponse(Class<T> responseType, Discount discount, Authentication authentication) {
+    public <T extends BaseResponse> EntityModel<T> makeDlcResponse_EntityModel(T dlc, Authentication authentication) {
+        return dlcAssembler.toModel(dlc, authentication);
+    }
+    public <T extends BaseResponse> List<T> makeDiscountResponses(Class<T> responseType, List<Discount> discounts) {
+        return discounts.stream().map(t -> makeDiscountResponse(responseType, t)).toList();
+    } 
+    public <T extends BaseResponse> T makeDiscountResponse(Class<T> responseType, Discount discount) {
         T response;
-        
+
         try {
             if (DiscountResponse_Full.class.equals(responseType)) {
                 response = (T) new DiscountResponse_Full(discount);
             } else {
                 response = responseType.getDeclaredConstructor(Discount.class).newInstance(discount);
-            } 
-            return discountAssembler.toModel(response, authentication);
+            }
+            return response;
         } catch (Exception e) {
             throw new RuntimeException("Error while creating response: ", e);
         }
     }
-
-    public <T extends BaseResponse> CollectionModel<EntityModel<T>> makePurchaseResponse_CollectionModel(Class<T> responseType, List<Purchase> purchases, Authentication authentication) {
-        return purchases.stream().map(purchase -> makePurchaseResponse(responseType, purchase, authentication)).collect(Collectors.collectingAndThen(Collectors.toList(), CollectionModel::of));
+    public <T extends BaseResponse> CollectionModel<EntityModel<T>> makeDiscountResponse_CollectionModel(List<T> discountResponse, Authentication authentication) {
+        return discountAssembler.toCollectionModel(discountResponse, authentication);
     } 
-    
-    public <T extends BaseResponse> EntityModel<T> makePurchaseResponse(Class<T> responseType, Purchase purchase, Authentication authentication) {
+    public <T extends BaseResponse> EntityModel<T> makeDiscountResponse_EntityModel(T discountResponse, Authentication authentication) {
+        return discountAssembler.toModel(discountResponse, authentication);
+    }
+
+    public <T extends BaseResponse> List<T> makePurchaseResponses(Class<T> responseType, List<Purchase> purchases) {
+        return purchases.stream().map(purchase -> makePurchaseResponse(responseType, purchase)).toList();
+    }
+    public <T extends BaseResponse> CollectionModel<EntityModel<T>> makePurchaseResponse_CollectionModel(List<T> purchasesResponses, Authentication authentication) {
+        return purchaseAssembler.toCollectionModel(purchasesResponses, authentication);
+    }
+
+    public <T extends BaseResponse> EntityModel<T> makePurchaseResponse_EntityModel(T purchaseResponses, Authentication authentication) {
+        return purchaseAssembler.toModel(purchaseResponses, authentication);
+    } 
+    public <T extends BaseResponse> T makePurchaseResponse(Class<T> responseType, Purchase purchase) {
         try {
             T response;
             BigDecimal totalDlcPrice = purchase.getPurchasedDLCs().stream().map(purchasedDLC -> purchasedDLC.getPriceAtTheTime().multiply(BigDecimal.valueOf(100 - purchasedDLC.getDiscountPercent()))).reduce(BigDecimal.ZERO, BigDecimal::add);
@@ -206,14 +242,14 @@ public class ServiceHelper {
 
             BigDecimal purchasedTotalPrice = totalDlcPrice.add(totalGamePrice).multiply(BigDecimal.valueOf(100 - additionalDiscountPercent));
             if (PurchaseResponse_Full.class.equals(responseType)) {
-                List<EntityModel<PurchaseDlcResponse>> purchasedDLCs = purchase.getPurchasedDLCs().stream().map(purchasedDLC -> makePurchaseDlcResponse(PurchaseDlcResponse.class, purchasedDLC, authentication)).toList();
-                List<EntityModel<PurchaseGameResponse>> purchasedGames = purchase.getPurchasedGames().stream().map(purchasedGame -> makePurchaseGameResponse(PurchaseGameResponse.class, purchasedGame, authentication)).toList();
-                EntityModel<UserResponse_Minimal> buyer = makeUserResponse(UserResponse_Minimal.class, purchase.getBoughtLibrary().getUser(), authentication, "");
+                List<EntityModel<PurchaseDlcResponse>> purchasedDLCs = purchase.getPurchasedDLCs().stream().map(purchasedDLC -> makePurchaseDlcResponse(PurchaseDlcResponse.class, purchasedDLC, null)).toList();
+                List<EntityModel<PurchaseGameResponse>> purchasedGames = purchase.getPurchasedGames().stream().map(purchasedGame -> makePurchaseGameResponse(PurchaseGameResponse.class, purchasedGame, null)).toList();
+                EntityModel<UserResponse_Minimal> buyer = makeUserResponse(UserResponse_Minimal.class, purchase.getBoughtLibrary().getUser(), null, "");
                 response = (T) new PurchaseResponse_Full(purchase, purchasedTotalPrice, buyer, purchasedGames, purchasedDLCs, additionalDiscountPercent);
             } else {
                 response = responseType.getDeclaredConstructor(Purchase.class, BigDecimal.class, double.class).newInstance(purchase, purchasedTotalPrice, additionalDiscountPercent);
             } 
-            return purchaseAssembler.toModel(response, authentication);
+            return response;
         } catch (Exception e) {
             throw new RuntimeException("Error while creating response: ", e);
         }
@@ -223,7 +259,7 @@ public class ServiceHelper {
         try {
             T response;
 
-            EntityModel<GameResponse_Minimal> gameResponseMinimalEntityModel = makeGameResponse(GameResponse_Minimal.class, purchasedGame.getGame(), authentication);
+            EntityModel<GameResponse_Minimal> gameResponseMinimalEntityModel = makeGameResponse_EntityModel(makeGameResponse(GameResponse_Minimal.class, purchasedGame.getGame(), authentication), authentication);
             if (PurchaseGameResponse.class.equals(responseType)) {
                 double totalDiscount = purchasedGame.getGame().getDiscounts().stream().mapToDouble(Discount::getDiscountPercent).sum();
                 totalDiscount = Math.max(0, Math.min(totalDiscount, 100));
@@ -242,7 +278,7 @@ public class ServiceHelper {
         try {
             T response;
 
-            EntityModel<DlcResponse_Basic> gameResponseMinimalEntityModel = makeDlcResponse(DlcResponse_Basic.class, purchasedDLC.getDlc(), authentication);
+            EntityModel<DlcResponse_Basic> gameResponseMinimalEntityModel = makeGameResponse_EntityModel(makeDlcResponse(DlcResponse_Basic.class, purchasedDLC.getDlc(), authentication), authentication);
             if (PurchaseDlcResponse.class.equals(responseType)) {
                 double totalDiscount = purchasedDLC.getDlc().getDiscounts().stream().mapToDouble(Discount::getDiscountPercent).sum();
                 totalDiscount = Math.max(0, Math.min(totalDiscount, 100));
